@@ -48,6 +48,8 @@ libcli_a_SOURCES += cli/cmd_report.cpp
 libcli_a_SOURCES += cli/cmd_report.hpp
 libcli_a_SOURCES += cli/cmd_report_html.cpp
 libcli_a_SOURCES += cli/cmd_report_html.hpp
+libcli_a_SOURCES += cli/cmd_report_junit.cpp
+libcli_a_SOURCES += cli/cmd_report_junit.hpp
 libcli_a_SOURCES += cli/cmd_test.cpp
 libcli_a_SOURCES += cli/cmd_test.hpp
 libcli_a_SOURCES += cli/common.cpp
