@@ -10,6 +10,7 @@ kyua-help.1
 kyua-list.1
 kyua-plain-interface.7
 kyua-report-html.1
+kyua-report-junit.1
 kyua-report.1
 kyua-test.1
 kyua-test-filters.7
