@@ -10,6 +10,7 @@ atf_test_program{name="cmd_debug_test"}
 atf_test_program{name="cmd_help_test"}
 atf_test_program{name="cmd_list_test"}
 atf_test_program{name="cmd_report_html_test"}
+atf_test_program{name="cmd_report_junit_test"}
 atf_test_program{name="cmd_report_test"}
 atf_test_program{name="cmd_test_test"}
 atf_test_program{name="global_test"}
